--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "aws-sdk": "^2.597.0",
+    "axios": "^0.19.0",
+    "bluebird": "^3.7.2",
     "cookie-parser": "^1.4.4",
     "cross-env": "^6.0.3",
     "express": "^4.17.1",
+    "file-type": "^12.4.2",
+    "fs": "0.0.1-security",
+    "multiparty": "^4.2.1",
     "nodemailer": "^6.4.2",
     "pg": "^7.17.0",
     "react": "^16.12.0",
